deps: Upgrade kordamp-gradle-plugins to 0.53.0 version