@@ -22,6 +22,13 @@ plugins {
   id "klokwrk-gradle-plugin-convention-groovy"
 }
 
+test {
+  // Note: "--add-opens java.base/java.lang=ALL-UNNAMED" is needed for the following test:
+  // groovy/org/klokwrk/cargotracking/domain/model/value/CommoditySpecification.groovy."map constructor requestedStorageTemperature check should fail for non existing commodityType"()
+  jvmArgs = ["-XX:TieredStopAtLevel=1", "--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+  useJUnitPlatform()
+}
+
 dependencies {
   implementation platform(project(":klokwrk-platform-spring-boot"))
 
